--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   my-app:
-    image: omaraboarab/testapp:1.0
+    image: omaraboarab/project:1.0
     ports:
       - 3000:3000
     depends_on:
@@ -24,7 +24,7 @@ services:
     image: mongo-express
     restart: always
     ports:
-      - 8080:8081
+      - 8081:8081
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
